# env_parser

./: .gitignore  README.md  safe-env-parser.cabal
app/: Main.hs
examples/: backtick.env  backtick_sq.env  bad_escape.env  bad_name.env  cycle.env  dangerous.env  duplicate.env  good.env  unclosed_quote.env  unknown.env
src/: Ast.hs  Evaluator.hs  JsonOutput.hs  Parser.hs  Spec.hs
test/: Spec.hs
